$Id: History,v 1.28 2000-11-02 17:06:38 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Sub-Category History file
                      -------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 02,   00   G. Cosmo                  geom-solids-csg-V02-00-08
- QA code revision and cleanup (+fixes from CodeWizard filtering):
  o Removed virtual keyword from GetEntityType() concrete function.
  o General cosmetics.

Oct 31,   00   V. Grichine               geom-solids-csg-V02-00-07
- G4Tubs::DistanceToOut(p,v,...):
  o Initialised sr and sphi to kInfinity and re-introduced additional
    condition on check for Rmin intersection (t2 >= 0).

Oct 26,   00   G. Cosmo                  geom-solids-csg-V02-00-06
- G4Cons::DistanceToOut(p,v): leave out warning if point is outside.

Oct 23,   00   G. Cosmo                  geom-solids-csg-V02-00-05
- G4Tubs::DistanceToOut(p,v,...):
  o Still correction to thickness of conical surfaces. (V.Grichine)
  o Commented-out additional condition on check for Rmin intersection
    (t2 >= 0), recently introduced (roi2).
    Requires further investigation !!
- G4Torus:
  o Introduced more stable numerical method (Newton-based) for computing
    roots of equations in DistanceToIn() and DistanceToOut(). (E.Medernach)
