@@ -1,4 +1,4 @@
-$Id: History,v 1.28 2000-11-02 17:06:38 gcosmo Exp $
+$Id: History,v 1.29 2000-11-10 17:46:32 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Nov 10,   00   G. Cosmo                  geom-solids-csg-V02-00-09
+- G4Torus.cc: removed debug print-out which was still included by mistake
+  in constructor.
 
 Nov 02,   00   G. Cosmo                  geom-solids-csg-V02-00-08
 - QA code revision and cleanup (+fixes from CodeWizard filtering):
